tests/baselines/reference/parserIndexMemberDeclaration6.errors.txt
==== tests/cases/compiler/parserIndexMemberDeclaration6.ts (1 errors) ====
    class C {
       static [x: string]: string;
       ~~~~~~
!!! parserIndexMemberDeclaration6.ts(2,4): error TS1055: Modifiers cannot appear here.
    }